fix GetAllUsers problem by removing deleted_at type time.Time(timestamptz) from sql query
