# docs/swagger.json
@@ -28,7 +28,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.User"
+                                "$ref": "#/definitions/dto.User"
                             }
                         }
                     },
@@ -37,7 +37,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     }
@@ -62,7 +62,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.RegisterUser"
+                            "$ref": "#/definitions/dto.RegisterUser"
                         }
                     }
                 ],
@@ -70,7 +70,7 @@
                     "201": {
                         "description": "Successfully created user",
                         "schema": {
-                            "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.User"
+                            "$ref": "#/definitions/dto.User"
                         }
                     },
                     "400": {
@@ -78,7 +78,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     }
@@ -108,7 +108,7 @@
                     "200": {
                         "description": "Successfully retrieved user",
                         "schema": {
-                            "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.User"
+                            "$ref": "#/definitions/dto.User"
                         }
                     },
                     "400": {
@@ -116,7 +116,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     }
@@ -152,7 +152,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     },
@@ -161,7 +161,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     }
@@ -193,7 +193,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.UpdateUser"
+                            "$ref": "#/definitions/dto.UpdateUser"
                         }
                     }
                 ],
@@ -201,7 +201,7 @@
                     "200": {
                         "description": "Successfully updated user",
                         "schema": {
-                            "$ref": "#/definitions/project-structure-template_internal_constants_model_dto.User"
+                            "$ref": "#/definitions/dto.User"
                         }
                     },
                     "400": {
@@ -209,7 +209,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/project-structure-template_internal_constants_model.ErrorResponse"
+                                "$ref": "#/definitions/model.ErrorResponse"
                             }
                         }
                     }
@@ -218,88 +218,7 @@
         }
     },
     "definitions": {
-        "pgtype.InfinityModifier": {
-            "type": "integer",
-            "enum": [
-                1,
-                0,
-                -1
-            ],
-            "x-enum-varnames": [
-                "Infinity",
-                "None",
-                "NegativeInfinity"
-            ]
-        },
-        "pgtype.Status": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "Undefined",
-                "Null",
-                "Present"
-            ]
-        },
-        "pgtype.Timestamptz": {
-            "type": "object",
-            "properties": {
-                "infinityModifier": {
-                    "$ref": "#/definitions/pgtype.InfinityModifier"
-                },
-                "status": {
-                    "$ref": "#/definitions/pgtype.Status"
-                },
-                "time": {
-                    "type": "string"
-                }
-            }
-        },
-        "project-structure-template_internal_constants_model.ErrorResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "description": "Code is the error code. It is not status code",
-                    "type": "integer"
-                },
-                "description": {
-                    "description": "Description is the error description.",
-                    "type": "string"
-                },
-                "field_error": {
-                    "description": "FieldError is the error detail for each field, if available that is.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/project-structure-template_internal_constants_model.FieldError"
-                    }
-                },
-                "message": {
-                    "description": "Message is the error message.",
-                    "type": "string"
-                },
-                "stack_trace": {
-                    "description": "StackTrace is the stack trace of the error.\nIt is only returned for debugging",
-                    "type": "string"
-                }
-            }
-        },
-        "project-structure-template_internal_constants_model.FieldError": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "description": "Description is the error description for this field.",
-                    "type": "string"
-                },
-                "name": {
-                    "description": "Name is the name of the field that caused the error.",
-                    "type": "string"
-                }
-            }
-        },
-        "project-structure-template_internal_constants_model_dto.RegisterUser": {
+        "dto.RegisterUser": {
             "type": "object",
             "properties": {
                 "email": {
@@ -320,7 +239,7 @@
                 }
             }
         },
-        "project-structure-template_internal_constants_model_dto.UpdateUser": {
+        "dto.UpdateUser": {
             "type": "object",
             "properties": {
                 "first_name": {
@@ -337,7 +256,7 @@
                 }
             }
         },
-        "project-structure-template_internal_constants_model_dto.User": {
+        "dto.User": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -346,11 +265,7 @@
                 },
                 "deleted_at": {
                     "description": "DeletedAt is the time the user was deleted.",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/pgtype.Timestamptz"
-                        }
-                    ]
+                    "type": "string"
                 },
                 "email": {
                     "description": "Email is the email of the user.",
@@ -378,6 +293,47 @@
                 },
                 "updated_at": {
                     "description": "UpdatedAt is the time the user was last updated.",
+                    "type": "string"
+                }
+            }
+        },
+        "model.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "Code is the error code. It is not status code",
+                    "type": "integer"
+                },
+                "description": {
+                    "description": "Description is the error description.",
+                    "type": "string"
+                },
+                "field_error": {
+                    "description": "FieldError is the error detail for each field, if available that is.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.FieldError"
+                    }
+                },
+                "message": {
+                    "description": "Message is the error message.",
+                    "type": "string"
+                },
+                "stack_trace": {
+                    "description": "StackTrace is the stack trace of the error.\nIt is only returned for debugging",
+                    "type": "string"
+                }
+            }
+        },
+        "model.FieldError": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "description": "Description is the error description for this field.",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "Name is the name of the field that caused the error.",
                     "type": "string"
                 }
             }
